--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
+    <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap"
+    rel="stylesheet">
     <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
     <div class="container">
         <h1>Weather App</h1>
         <div class="search-container">
+          <i class="fa-solid fa-location-dot"></i>
             <input type="text" id="location" placeholder="Enter location">
-            <button id="search">Search</button>
+            <button id="search" class="fa-solid fa-magnifying-glass"></button>
         </div>
         <div class="weather-info">
             <p id="location-name"></p>
