--- a/index.html
+++ b/index.html
@@ -17,11 +17,31 @@
             <input type="text" id="location" placeholder="Enter location">
             <button id="search" class="fa-solid fa-magnifying-glass"></button>
         </div>
+        
         <div class="weather-info">
             <p id="location-name"></p>
+            <img src="">
             <p id="temperature"></p>
             <p id="description"></p>
         </div>
+
+        <div class="weather-details">
+          <div class="humidity">
+              <i class="fa-solid fa-water"></i>
+              <div class="text">
+                  <span></span>
+                  <p>Humidity</p>
+              </div>
+          </div>
+          <div class="wind">
+              <i class="fa-solid fa-wind"></i>
+              <div class="text">
+                  <span></span>
+                  <p>Wind Speed</p>
+              </div>
+          </div>
+        </div>
+
     </div>
     <script src="javascript/index.js"></script>
 </body>
