--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
         <div class="weather-info">
             <p id="location-name"></p>
-            <img src="">
+            <img src="" id="image">
             <p id="temperature"></p>
             <p id="description"></p>
         </div>
