fixed fadeIn animation

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div class="search-container">
           <i class="fa-solid fa-location-dot"></i>
             <input type="text" id="location" placeholder="Enter location">
-            <button id="search" class="fa-solid fa-magnifying-glass"></button>
+            <button id="search" class="fa-solid fa-magnifying-glass">a</button>
         </div>
-        
+
         <div class="weather-info">
             <p id="location-name"></p>
             <img src="" id="image">
