added forecast history feature

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
           <button id="search" class="fa-solid fa-magnifying-glass"></button>
       </div>
 
-      <div class="weather-info fadeIn">
+      <div class="weather-info">
           <p id="location-name"></p>
           <img src="" id="image">
           <p id="temperature"></p>
           <p id="description"></p>
       </div>
 
-      <div class="weather-details fadeIn">
+      <div class="weather-details">
         <div class="humidity">
             <i class="fa-solid fa-water"></i>
             <div class="text">
@@ -49,10 +49,15 @@
         </div>
       </div>
 
+      <!-- <div class="weather-details"> -->
+        <div id="forecast-container"></div>
+      <!-- </div> -->
+
   </div>
 
   <script src="javascript/index.js"></script>
   <script src="javascript/loadingSpinner.js"></script>
-  
+
+
 </body>
 </html>
